@@ -1,0 +1,9 @@
+# $NetBSD: Makefile,v 1.1 2012/08/26 23:03:21 jmmv Exp $
+
+.include <bsd.own.mk>
+
+TESTSDIR=	${TESTSBASE}/share
+
+TESTS_SUBDIRS=	mk
+
+.include <bsd.test.mk>
